# pspdftool-code

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.tail  README  autogen.sh  cmdexec.c  cmdexec.h  common.c  common.h  config.h  configure  configure.in  doxygen.conf  dummydoc.c  fileio.c  fileio.h  main.c  main_page.c  page_list.c  pdf_doc.c  pdf_filters.c  pdf_lib.c  pdf_lib.h  pdf_parser.c  pdf_type.h  ps_doc.c  ps_lib.c  ps_lib.h  pspdftool.1  pspdftool.1x  vdoc.c  vdoc.h  vdocerror.c  vldoc.c  vldoc.h
debian/: changelog  control  copyright  rules
doc/: navod.txt
doc/bakalarka/: Makefile  bc_pspdftool.tex  bc_pspdftool_iso8859-2.tex
