dnl Version informations and initialization.
AC_INIT(pspdftool,0.02,Ales Snuparek <snuparek@atlas.cz>)
AM_INIT_AUTOMAKE(pspdftool,0.02)
AC_CONFIG_HEADERS(config.h)
AM_SANITY_CHECK

dnl Possible additional features.
AC_ARG_ENABLE([debug],
            [AS_HELP_STRING([--enable-debug],
              [enables extra debuging informations @<:@default=disabled@:>@])],
            [debug=true],
            [])

dnl AC_ARG_ENABLE([doc],
dnl            [AS_HELP_STRING([--enable-doc],
dnl              [enables extra documentation (development related) @<:@default=disabled@:>@])],
dnl            [doc=true],
dnl            [])

AC_ARG_WITH([zlib],
            [AS_HELP_STRING([--with-zlib],
              [support for zlib @<:@default=check@:>@])],
            [with_zlib=$withval],
            [with_zlib=no])

AC_ARG_WITH([ghostscript],
            [AS_HELP_STRING([--with-ghostscript],
              [support for ghostscript @<:@default=check@:>@])],
            [with_ghost=$withval],
            [with_ghost=no])

AC_ARG_WITH([lzw],
            [AS_HELP_STRING([--with-lzw],
              [support for lzw @<:@default=yes@:>@])],
            [with_lzw=$withval],
            [with_lzw=no])

dnl Libraries check
AC_CHECK_FUNCS

if test "x$with_zlib" != xno; then
	AC_CHECK_LIB([z], [uncompress],
              [with_zlib=checked],
              [if test "x$with_zlib" != xcheck; then
                 AC_MSG_FAILURE(
                   [--with-zlib was given, but test for zlib failed])
               fi
              ])
fi

if test "x$with_ghost" != xno; then
	AC_DEFINE(HAVE_GS,1,[Do we have ghostscript?])
fi

if test "x$with_zlib" = xchecked; then
	AC_DEFINE(HAVE_ZLIB,1,[Do we have zlib?])
fi

if test "x$with_lzw" != xno; then
	AC_DEFINE(HAVE_LZW,1,[Do we want lzw?])
fi


dnl We want C, don't we?
AC_PROG_CC

dnl We want other necessary tools too
AC_PROG_MAKE_SET
AC_PROG_INSTALL

dnl Do we want to debug things?.
if test "x$debug" = xtrue; then
AC_SUBST(DEBUG,"-g -D_DEBUG")
else
AC_SUBST(DEBUG,"")
fi

dnl Doxygen is other very usefull thing.
if test "x$doc" = xtrue; then
AC_SUBST(DOC,doxy_doc)
AC_MSG_CHECKING(for doxygen)
if test `doxygen -h | wc -l` -gt 1; then
	AC_MSG_RESULT(yes)
	AC_SUBST(DOXYGEN,doxygen)
else
	AC_MSG_RESULT(no)
        AC_MSG_FAILURE([--enable-doc was given, but test for doxygen failed])
fi
else
	AC_SUBST(DOXYGEN,"echo Skipping doxygen docs...")
fi

dnl Check for libraries.
AC_CHECK_LIB(m,log,,AC_MSG_ERROR(Unable to find math (-lm) library))

dnl Check for headers.
AC_CHECK_HEADERS(stdlib.h unistd.h ctype.h getopt.h libgen.h,,AC_MSG_ERROR([
required header files missing]))

dnl Check for other stuffs
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([bzero pow strcasecmp strtol])
AC_C_CONST
AC_C_RESTRICT

dnl What output files do we want?
AC_OUTPUT(Makefile)
